fix/checking WebSocket data + scrollbar style

--- a/src/components/burger-constructor/burger-constructor.module.css
+++ b/src/components/burger-constructor/burger-constructor.module.css
@@ -23,6 +23,7 @@
   overflow-y: scroll;
   max-height: calc(100vh - 550px);
   composes: custom-scroll from global;
+  scrollbar-width: thin;
 }
 
 .margin_element {
