--- a/src/components/burger-ingredients/burger-ingredients.module.css
+++ b/src/components/burger-ingredients/burger-ingredients.module.css
@@ -18,4 +18,5 @@
   overflow-y: scroll;
   max-height: calc(100vh - 350px);
   composes: custom-scroll from global;
+  scrollbar-width: thin;
 }
