--- a/src/components/order-card/order-card-details/order-card-details.module.css
+++ b/src/components/order-card/order-card-details/order-card-details.module.css
@@ -40,6 +40,7 @@
 
 .list {
   composes: mt-6 mb-3 pb-1 custom-scroll from global;
+  scrollbar-width: thin;
   overflow-y: scroll;
   max-height: 304px;
   display: flex;
